packages/next-swc/crates/core/tests/errors/next-font-loaders/options-object/output.js
import a from '@next/font/google?{"font":"ABeeZee"}';
import '@next/font/google?{"font":"ABeeZee"}';
import a from '@next/font/google?{"font":"ABeeZee"}';
import '@next/font/google?{"font":"ABeeZee"}';
import a from '@next/font/google?{"font":"ABeeZee"}';
import '@next/font/google?{"font":"ABeeZee"}';
import a from '@next/font/google?{"font":"ABeeZee"}';
const a = fn({
    10: 'hello'
});
fn({
    variant: [
        ...[],
        'hello'
    ]
});
const a = fn({
    variant: [
        i1
    ]
});
fn({
    variant: [
        ,
        ''
    ]
});
const a = fn({
    variant: ()=>{}
});
fn({
    variant () {}
});
const a = fn({
    ...{}
});
